hpc notes update

--- a/masters/HPC/Teoria/1.SingleCoreToMultiCore.md
+++ b/masters/HPC/Teoria/1.SingleCoreToMultiCore.md
@@ -13,10 +13,9 @@ Due parole di estrema importanza dato il contesto:
 
 ## Perchè i multicores:
 
-le SPECint performance dei chip migliorava di un 52% di anno in anno dal 1986 circa al 2002, dove da tale anno la crescita è diventata di un 20% per anno e successivamente solo di un 6%.  
+Le performance dei chip miglioravano di un 52% di anno in anno dal 1986 circa al 2002, dove da tale anno la crescita è diventata di un 20% per anno e successivamente solo di un 6%.  
 L'incremento quindi decrese in maniera significativa, i benefici sono sempre minori (processori basati su un singolo core), bisogna quindi cambiare architettura e trovare altre soluzioni $\rightarrow$ parallelismo.  
 
-ILP -> instruction level parallelism
 
 Il cambiamento di paradigma verso architettura multicore corregge il trend migliorando di un 23% le perfomance di anno in anno.  
 
@@ -107,7 +106,7 @@ Notare come la velocità della CPU cresce del 55% ma quella della RAM solo del 7
 
 ## Approccio Multicore
 
-Serve un processore multicore:
+- Serve un processore multicore:  
     - più semplice (pipeline con meno stage)
     - più lento 
     - meno esigente di energia (power demanding)
